--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
 </head>
     <style>
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
 
 #back-image{
 background-image: url(https://www.kayak.com/rimg/dimg/dynamic/19/2024/02/362583ac2994e67f2f8aff29b4bafd8c.webp);
